# src/autenticacao/dto/login.dto.ts
@@ -1,0 +1,10 @@
+import { IsEmail, IsNotEmpty, IsString } from 'class-validator';
+
+export class LoginDto {
+  @IsEmail({}, { message: 'Endereço de e-mail inválido.' })
+  public email: string;
+
+  @IsNotEmpty({ message: 'A senha é obrigatória.' })
+  @IsString({ message: 'A senha deve ser uma string.' })
+  public senha: string;
+}
